--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -40,7 +40,7 @@
     "callback-return": "error",
     "camelcase": "error",
     "capitalized-comments": "error",
-    "class-methods-use-this": "error",
+    "class-methods-use-this": "off",
     "comma-dangle": "error",
 
     "comma-spacing": [
