--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/polyfill": "^7.8.3",
-    "typescript": "^3.8.2"
+    "typescript": "^3.8.2",
+    "ua-parser-js": "^0.7.21"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
