--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start:server": "node ./server.js",
     "build": "webpack --mode production",
     "dev": "webpack  --mode development -w",
+    "deploy": "gh-pages -d dist",
     "lint": "eslint src/**",
     "test": "jest"
   },
@@ -16,6 +17,7 @@
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/polyfill": "^7.8.3",
+    "gh-pages": "^2.2.0",
     "typescript": "^3.8.2",
     "ua-parser-js": "^0.7.21"
   },
