--- a/manifest.json
+++ b/manifest.json
@@ -5,6 +5,6 @@
   "background_color": "#2196f3",
   "display": "fullscreen",
   "orientation": "portrait",
-  "scope": "/",
-  "start_url": "/"
+  "scope": "https://ilyalytvynov.github.io/snake/",
+  "start_url": "https://ilyalytvynov.github.io/snake/"
 }
